Menu mobile event js

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,10 +1,12 @@
-/* footer .logo{
+/* footer {
+  .logo {
     width: 50px;
     position: absolute;
     bottom: 0;
     left: 0;
-}
 
-footer .logo img {
-    width: 100%;
+    img {
+      width: 100%;
+    }
+  }
 } */
