Final banner e rodapé antes do reactjs

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -20,6 +20,7 @@ h1, h2, h3, h4, h5, h6, p {
     --font-16px: 1em;
     --font-18px: 1.125em;
     --font-20px: 1.25em;
+    --font-22px: 1.375em;
     --font-24px: 1.5em;
     --font-25px: 1.5625em;
     --font-36px: 2.25em;
