--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -6,6 +6,13 @@
     box-sizing: border-box;
 }
 
+.container-fluid {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .row {
     display: flex;
     flex-wrap: wrap;
@@ -19,40 +26,40 @@
     box-sizing: border-box;
 }
 
-.col-sx-1 {
+.col-xs-1 {
     width: 8.333%;
 }
-.col-sx-2 {
+.col-xs-2 {
     width: 16.666%;
 }
-.col-sx-3 {
+.col-xs-3 {
     width: 25%;
 }
-.col-sx-4 {
+.col-xs-4 {
     width: 33.333%;
 }
-.col-sx-5 {
+.col-xs-5 {
     width: 41.666%;
 }
-.col-sx-6 {
+.col-xs-6 {
     width: 50%;
 }
-.col-sx-7 {
+.col-xs-7 {
     width: 58.333%
 }
-.col-sx-8 {
+.col-xs-8 {
     width: 66.666%
 }
-.col-sx-9 {
+.col-xs-9 {
     width: 75%;
 }
-.col-sx-10 {
+.col-xs-10 {
     width: 83.333%;
 }
-.col-sx-11 {
+.col-xs-11 {
     width: 91.666%;
 }
-.col-sx-12 {
+.col-xs-12 {
     width: 100%;
 }
 
