--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -2,8 +2,26 @@
     padding: 0;
 }
 
-.news{
+.banners {
+    margin-bottom: 4em;
+}
 
+.banners__item {
+    padding: 0;
+    border: 4px solid #535353;
+}
+
+.banners__item:first-child {
+    border-right-width: 2px;
+}
+
+.banners__item:last-child {
+    border-left-width: 2px;
+}
+
+.banners__figure {
+    overflow: hidden;
+    position: relative;
 }
 
 .news__item{
@@ -43,17 +61,13 @@
     text-decoration: underline;
 }
 
-.news__banner {
-
-}
-
 .news__figure {
     overflow: hidden;
     border-radius: 20px;
     position: relative;
 }
 
-.news__figure .news__image {
+.news__figure .news__image, .banners__figure .banners__image {
     height: auto;
     width: 100%;
 }
@@ -62,40 +76,56 @@
     transform: scale(1.1);
 }
 
-.news__caption {
+.news__caption, .banners__caption {
     position: absolute;
     left: 0;
     bottom: 0;
 }
 
-.news__caption div {
+.news__caption div, .banners__caption div {
     background-color: rgba(0, 0, 0, 0.6);
     padding: 18px 26px;
     box-sizing: border-box;
 }
 
-.news__caption span {
+.news__caption span, .banners__caption div span {
     color: #fff;
     font-weight: 700;
     font-size: var(--font-16px);
     background: #d2232a;
     padding: 6px 15px 4px;
     position: relative;
-    font-size: 1rem;
+    font-size: var(--font-16px);
     left: 25px;
     bottom: 10px;
     text-transform: uppercase;
 }
 
-.news__caption h3 {
+.banners__caption div span{
+    padding: 4PX 10px;
+    left: 0;
+    top: -38px;
+}
+
+.news__caption h3, .banners__caption h3 {
     color: #fff;
     font-weight: 700;
     font-size: var(--font-18px);
     margin-bottom: var(--font-8px);
+    text-transform: uppercase;
 }   
 
-.news__caption p {
+.news__caption p, .banners__caption p {
     color: #fff;
     font-weight: 400;
     font-size: var(--font-16px);
 }   
+
+.partners__item {
+    text-align: center;
+}
+
+.partners__item a img {
+    width: 100%;
+    max-width: 375px;
+}
